k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lolaivys-house
  labels:
    app.kubernetes.io/name: lolaivys-house
