k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lolaivys-house
  namespace: lolaivys-house
  labels:
    app: lolaivys-house
spec:
  type: ClusterIP
  selector:
    app: lolaivys-house
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
